examples/pos/imports/issue270.effekt
module examples/pos/imports/importing_resources

import examples/pos/imports/resources

extern def doNothing() at { r }: Unit = default { () }

def main() = println("worked")