examples/neg/unsupported_extern.effekt
extern def foo() at io: Unit = none "" // WARN not supported
extern def foo2() at io: Unit = none "" // unused

def bar(): Unit = foo()
def bar2(): Unit = foo2()

def main(): Unit = {
  bar()
}